--- a/FirstSprintApp/FirstSprintApp/Base.lproj/Main.storyboard
+++ b/FirstSprintApp/FirstSprintApp/Base.lproj/Main.storyboard
@@ -215,7 +215,7 @@
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Люди в очереди: " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="267" translatesAutoresizingMaskIntoConstraints="NO" id="rrX-Rl-Ocp">
                                 <rect key="frame" x="68" y="399.5" width="278" height="97"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="97" id="48Q-TX-Hmh"/>
                                     <constraint firstAttribute="width" constant="278" id="U7y-SE-Xy6"/>
